Assembly Browser: Added search in graph view

--- a/sources/ILSpyVisualizer/AssemblyBrowser/AssemblyBrowserWindow.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/AssemblyBrowserWindow.xaml
@@ -27,6 +27,7 @@
     <Window.InputBindings>
         <KeyBinding Command="NavigationCommands.BrowseBack" Key="Left" Modifiers="Control"/>
         <KeyBinding Command="NavigationCommands.BrowseForward" Key="Right" Modifiers="Control"/>
+        <KeyBinding Command="{Binding ShowInnerSearchCommand}" Key="F" Modifiers="Control"/>
     </Window.InputBindings>
     <Window.CommandBindings>
         <CommandBinding Command="Search" Executed="SearchExecuted"/>
